--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.2.2
   path_provider: ^2.0.11
+  firebase_core: ^2.30.0
+  firebase_analytics: ^10.8.0
+  firebase_auth: ^4.18.0
+  cloud_firestore: ^4.15.0
 
 dev_dependencies:
   flutter_test:
